[Fixed] Parts 24,25 Homework