@@ -2,7 +2,6 @@ package com.pingwit_java_course.part25.homework.task2;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class ExtractAllowedManufacturers {
     public static void main(String[] args) {
@@ -16,9 +15,9 @@ public class ExtractAllowedManufacturers {
         Set<String> allowedManufacturers = Set.of("Apple", "Samsung", "Xiaomi");
 
         List<String> manufacturers = phones.stream()
-                .map(phone -> phone.getManufacturer()) // не ошибка, но более современный стиль будет phone -> phone.getManufacturer() -> Phone::getManufacturer
+                .map(Phone::getManufacturer)
                 .filter(allowedManufacturers::contains)
-                .collect(Collectors.toList()); //.collect(Collectors.toList()) -> toList()
+                .toList();
 
         System.out.println("Allowed manufacturers: " + manufacturers);
     }
